--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,14 @@
   "author": "Tahsina Bintay Azam",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
     "mysql2": "^2.3.0",
     "mysql8.0": "^1.1.2",
     "nodemon": "^2.0.13"
