--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@fontsource/abhaya-libre": "^4.5.0",
+    "@fontsource/alegreya-sc": "^4.5.0",
+    "@fontsource/calistoga": "^4.5.0",
+    "@fontsource/open-sans": "^4.5.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
@@ -15,13 +19,15 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
-    "mailgun-js": "^0.22.0",
     "graphql": "^16.0.1",
+    "mailgun-js": "^0.22.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "typeface-open-sans": "^1.1.13",
+    "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
