--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "start": "nodemon server.js",
   "author": "Tahsina Bintay Azam",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -16,6 +19,6 @@
     "mongoose": "^6.0.12",
     "mysql2": "^2.3.0",
     "mysql8.0": "^1.1.2",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.15"
   }
 }
