--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
+    "firebase": "8.8.1",
     "graphql": "^16.0.1",
     "mailgun-js": "^0.22.0",
     "react": "^17.0.2",
