--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@fontsource/alegreya-sc": "^4.5.0",
     "@fontsource/calistoga": "^4.5.0",
     "@fontsource/open-sans": "^4.5.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@sendgrid/mail": "^7.5.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-input-files": "^1.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typeface-open-sans": "^1.1.13",
