--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-input-files": "^1.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "typeface-open-sans": "^1.1.13",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
