--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "8.8.1",
     "graphql": "^16.0.1",
     "mailgun-js": "^0.22.0",
+    "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -33,7 +34,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
