--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "mysql2": "^2.3.0",
