--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-input-files": "^1.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "to-uuid": "^0.1.3",
     "typeface-open-sans": "^1.1.13",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
