--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
+    "mongoose-fuzzy-searching": "^2.0.2",
     "mysql2": "^2.3.0",
     "mysql8.0": "^1.1.2",
     "nodemon": "^2.0.15"
