--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
+    "bs5-utils": "^1.0.1",
     "firebase": "8.8.1",
     "graphql": "^16.0.1",
     "mailgun-js": "^0.22.0",
@@ -29,13 +30,15 @@
     "react-input-files": "^1.2.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.3.0",
     "to-uuid": "^0.1.3",
     "typeface-open-sans": "^1.1.13",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
