--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-input-files": "^1.2.0",
+    "react-loadingg": "^1.7.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
@@ -38,7 +39,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
