--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bs5-utils": "^1.0.1",
     "firebase": "8.8.1",
     "graphql": "^16.0.1",
+    "history": "^5.2.0",
     "mailgun-js": "^0.22.0",
     "multer": "^1.4.4",
     "react": "^17.0.2",
@@ -36,6 +37,7 @@
     "to-uuid": "^0.1.3",
     "typeface-open-sans": "^1.1.13",
     "typeface-roboto": "^1.1.13",
+    "use-history": "^1.4.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
