--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bs5-utils": "^1.0.1",
     "firebase": "8.8.1",
     "graphql": "^16.0.1",
+    "gsap": "^3.9.1",
     "history": "^5.2.0",
     "mailgun-js": "^0.22.0",
     "multer": "^1.4.4",
@@ -41,7 +42,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
