--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-input-files": "^1.2.0",
     "react-loadingg": "^1.7.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
